<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">种联网视频监控客户端</string>

    <string name="activity_title_main">视频监控列表</string>
    <string name="activity_title_player">视频播放</string>
    <string name="activity_title_shoot">录制视频</string>
    <string name="activity_title_setting">录制视频</string>

    <!-- message -->
    <string name="app_exit_msg">再按一次返回键退出应用</string>

    <string name="tab_monitor">监控列表</string>
    <string name="tab_video">录制视频</string>
    <string name="tab_setting">设置</string>

    <!-- menu-->
    <string name="shoot_video">录制视频</string>
    <string name="logout">退出登录</string>
    <string name="app_exit">退出应用</string>

    <!--actionbar_title-->
    <string name="device_list">监控设备</string>
    <string name="device_detail">设备详情</string>
    <string name="record_list">历史视频</string>

    <!-- sliding menu -->
    <string name="setting">设置</string>
    <string name="username_default">default</string>


    <!-- 登录界面 -->
    <string name="login_username">账号</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password">密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_remember_username">记住用户名</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_button">登录</string>
    <string name="login_setting">设置</string>
    <string name="login_bottom_text">中国电信智慧种联网视频监控套件</string>
    <string name="login_loading">登录中</string>
    <string name="login_success">登录成功</string>
    <string name="login_wrongpassword">登录失败，用户名或密码不正确</string>
    <string name="login_servererror">登录失败，服务器没有响应</string>
    <!-- 登录设置界面 -->
    <string name="title_activity_login_settings">登录设置</string>
    <string name="login_settings_server">服务器地址</string>
    <string name="login_settings_port">服务器端口</string>
    <string name="login_settings_save_button">保存设置</string>

    <!-- 播放器界面文字定义 -->
    <string name="player_loading">载入中</string>
    <!-- 设备列表界面 -->
    <string name="devicelist_title">监控列表</string>
    <string name="devicelist_loading">正在获取监控设备信息</string>
    <string name="devicelist_error">解析设备列表出错</string>
    <string name="devicelist_fail">获取设备列表失败</string>
    <!-- 设备详情界面 -->
    <string name="detail_device_name">设备名称:</string>
    <string name="detail_device_name_default">未定义</string>
    <string name="detail_device_type">设备类型:</string>
    <string name="detail_device_type_default">未定义</string>
    <string name="detail_device_address">安装地址:</string>
    <string name="detail_device_address_default">未定义地址</string>
    <string name="detail_device_live_status">直播状态:</string>
    <string name="detail_device_live_status_default">未知</string>
    <string name="detail_device_record_status">录制状态:</string>
    <string name="detail_device_record_status_default">未知</string>
    <string name="detail_live_button">直播</string>
    <string name="detail_viewrecord_button">查看历史视频</string>

    <string name="detail_hdcamera">高清摄像机</string>
    <string name="detail_sdcamera">标清摄像机</string>
    <string name="detail_phone">手机</string>

    <string name="detail_camera_live_ready">直播中</string>
    <string name="detail_phone_live_ready">就绪</string>
    <!-- 录制视频界面 -->
    <string name="record_title">录制视频</string>
    <string name="record_loading">获取设备状态中</string>
    <string name="record_error">未知错误</string>
    <string name="record_not_register">该设备未在管理平台注册，点击页面上方设置图标，进行设备注册</string>
    <string name="record_disabled">该设备的视频上传功能未启用，请联系管理员</string>
    <string name="record_start_button">开始录制</string>
    <!-- 历史视频界面 -->
    <string name="recordlist_title">历史视频列表</string>
    <string name="recordlist_loading">正在获取录制视频信息</string>
    <string name="recordlist_pulltoload">上拉加载更多</string>
    <string name="recordlist_releasetoload">放开加载更多</string>
    <string name="recordlist_startloading">正在加载</string>
    <string name="recordlist_error">解析视频列表出错</string>
    <string name="recordlist_fail">获取视频列表失败</string>
    <string name="recordlist_starttime">起始时间:</string>
    <string name="recordlist_endtime">结束时间:</string>
    <string name="recordlist_duration">持续时间:</string>
    <string name="recordlist_play">播放</string>
    <!-- 设置界面 -->
    <string name="settings_title">设置</string>
    <string name="settings_loading">查询中</string>
    <string name="settings_not_register">未注册，点击此处自动注册</string>
    <string name="settings_registered">已注册 设备ID为%d</string>
    <string name="settings_registering">注册中</string>
    <string name="settings_register_success">注册成功</string>
    <string name="settings_already_register">本设备已注册</string>
    <string name="settings_wrong">未知错误</string>
    <string name="settings_server">服务器地址</string>
    <string name="settings_server_default">222.197.180.143</string>
    <string name="settings_port">服务器端口</string>
    <string name="settings_port_default">8087</string>
    <string name="settings_videoquality">录制质量（0~100）</string>
    <string name="settings_videoquality_default">50</string>
    <string name="settings_register_status">手机注册状态</string>
    <string name="settings_register_status_default">未注册，点击此处自动注册</string>
    <string name="settings_save_button">保存设置</string>
    <string name="settings_logout_button">退出登录</string>
    <string name="settings_enter_server">请输入服务器地址</string>
    <string name="settings_enter_port">请输入服务器端口</string>
    <string name="setting_port_error">服务器端口格式不正确</string>
    <string name="setting_quality_error">录制质量设置不正确</string>
    <string name="settings_save_success">保存成功</string>
</resources>
