<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.com.chinatelecom.zlwcameraclient.DeviceDetailFragment">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/page_title_bar_id"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="40.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="20.0dip" >

            <RelativeLayout
                android:id="@+id/device_brief"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2.0dip"
                android:layout_marginRight="2.0dip"
                android:background="@drawable/detail_item_deafult"
                android:paddingBottom="16.0dip"
                android:paddingTop="8.0dip" >

                <ImageView
                    android:id="@+id/device_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_launcher" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@+id/device_icon"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/detail_device_name"
                            android:textColor="@android:color/black"
                            android:textSize="14dp" />

                        <TextView
                            android:id="@+id/device_name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="10dp"
                            android:text="@string/detail_device_name_default" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/detail_device_type"
                            android:textColor="@android:color/black"
                            android:textSize="14dp" />

                        <TextView
                            android:id="@+id/device_type"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="10dp"
                            android:text="@string/detail_device_type_default" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/device_other"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/device_brief"
                android:layout_marginTop="10dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/detail_item_deafult"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp" >

                        <TextView
                            android:id="@+id/textview_1a_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_device_address"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/device_addr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/textview_1a_id"
                            android:text="@string/detail_device_address_default"
                            android:textColor="@android:color/black" />


                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout_1b"
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:layout_marginBottom="10dip"
                        android:layout_marginTop="10dip"
                        android:background="#EEEEE0" >
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp" >

                        <TextView
                            android:id="@+id/textview_3a_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_device_live_status"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/device_live_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/textview_3a_id"
                            android:text="@string/detail_device_live_status_default"
                            android:textColor="@android:color/black" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout_2b"
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:layout_marginBottom="10dip"
                        android:layout_marginTop="10dip"
                        android:background="#EEEEE0" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:id="@+id/textview_5a_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_device_record_status"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/device_record_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/textview_5a_id"
                            android:text="@string/detail_device_record_status_default"
                            android:textColor="@android:color/black" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/view_live_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button_background"
                android:text="@string/detail_live_button"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/view_record_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button_background"
                android:text="@string/detail_viewrecord_button"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
