<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="40.0dip"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:paddingTop="10.0dip" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/detail_item_default"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_weight="7"
                        android:orientation="vertical"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_server"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <EditText
                        android:id="@+id/server_addr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/settings_server_default"
                        android:textSize="14sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginBottom="0dip"
                    android:layout_marginTop="10dip"
                    android:background="#EEEEE0" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_weight="7"
                        android:orientation="vertical"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_port"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <EditText
                        android:id="@+id/server_port"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/settings_port_default"
                        android:textSize="14sp"
                        android:inputType="number"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginBottom="0dip"
                    android:layout_marginTop="10dip"
                    android:background="#EEEEE0" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_weight="7"
                        android:orientation="vertical"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_videoquality"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <EditText
                        android:id="@+id/quality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/settings_videoquality_default"
                        android:textSize="14sp"
                        android:inputType="number"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginBottom="0dip"
                    android:layout_marginTop="10dip"
                    android:background="#EEEEE0" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_weight="7"
                        android:orientation="vertical"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_register_status"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/device_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/settings_register_status_default"
                        android:textSize="14sp"
                        android:textColor="@color/huise" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/save_settings_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="@string/settings_save_button"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>