<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.com.chinatelecom.zlwcameraclient.LoginSettings">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="40.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="5dp"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/detail_item_deafult"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_weight="7"
                            android:orientation="vertical"
                            android:gravity="center_vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/login_settings_server"
                                android:textSize="14sp"/>
                        </LinearLayout>

                        <EditText
                            android:id="@+id/login_server_addr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:text="@string/settings_server_default"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:layout_marginBottom="0dip"
                        android:layout_marginTop="10dip"
                        android:background="#EEEEE0" >
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:paddingBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_weight="7"
                            android:orientation="vertical"
                            android:gravity="center_vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/login_settings_port"
                                android:textSize="14sp"/>
                        </LinearLayout>

                        <EditText
                            android:id="@+id/login_server_port"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:text="@string/settings_port_default"
                            android:textSize="14sp"
                            android:inputType="number"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/login_save_settings_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button_background"
                android:text="@string/login_settings_save_button"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
